Add new template
- upload de fotos funcionando;
- Cadastro de cliente funcionando
- add views parciais

--- a/app/views/meuHelper/meuForm.scala.html
+++ b/app/views/meuHelper/meuForm.scala.html
@@ -1,6 +1,6 @@
-@(nome: String, acao: play.api.mvc.Call, metodo: String)(conteudo: Html)
+@(nome: String, acao: play.api.mvc.Call, metodo: String, enctype: String = "application/x-www-form-urlencoded")(conteudo: Html)
 
-<form name="@nome" action="@acao" method="@metodo">
+<form name="@nome" action="@acao" method="@metodo" enctype="@enctype">
 
 	@conteudo
 
