--- a/app/views/meuHelper/inputFile.scala.html
+++ b/app/views/meuHelper/inputFile.scala.html
@@ -2,9 +2,9 @@
 <div class="file-field input-field">
       <div class="btn">
         <span>@label</span>
-        <input type="@tipo">
+        <input type="@tipo" name="foto">
       </div>
       <div class="file-path-wrapper">
-        <input class="file-path validate" type="text">
+        <input class="file-path validate" type="text" placeholder="Upload one or more files">
       </div>
     </div>
