--- a/app/views/produtos/detalhes.scala.html
+++ b/app/views/produtos/detalhes.scala.html
@@ -3,7 +3,7 @@
 @main("Formulário de Produto") {
 <div style="padding:30px;">
 	<h5>Formulário de Produto</h5>
-	@meuHelper.meuForm("produtos", routes.Produtos.salvar(id), "post"){
+	@meuHelper.meuForm("produtos", routes.Produtos.salvar(id), "post", "multipart/form-data"){
 		<fieldset>
 		<legend>Produto (@formProduto("nome").valueOr("Novo"))</legend>
 		@meuHelper.inputText("codigoBarras", formProduto("codigoBarras").value, "Codigo de Barras:", "text")
