--- a/app/views/site/register.scala.html
+++ b/app/views/site/register.scala.html
@@ -1,4 +1,5 @@
-@(message: String)
+@(formCliente: Form[Cliente], id:Long)
+@import meuHelper._
 <!--
 Author: W3layouts
 Author URL: http://w3layouts.com
@@ -6,7 +7,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
 <title>Atelier Flávia Salles</title>
 <link href="@routes.Assets.versioned("vendors/appatelier/css/bootstrap.css")" rel='stylesheet' type='text/css' />
@@ -42,10 +43,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="header-right">
 						<div class="cart box_1">
-							<a href="views.html.views.site.checkout.html">
+							<a href="checkout.html">
 								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="@routes.Assets.versioned("images/bag.png")" alt=""></h3>
 							</a>	
-							<p><a href="javascript:;" class="simpleCart_empty">Carrinho Vazio</a></p>
+							<p><a href="javascript:;" class="simpleCart_empty">Carrinho vazio</a></p>
 							<div class="clearfix"> </div>
 						</div>
 				</div>
@@ -54,8 +55,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<!-- header-section-ends -->
-			<div class="banner-top">
+	<div class="inner-banner">
 		<div class="container">
+			<div class="banner-top inner-head">
 				<nav class="navbar navbar-default" role="navigation">
 	    <div class="navbar-header">
 	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -184,243 +186,79 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		            </ul>
 		        </li>
 					<li><a href="typography.html">TYPO</a></li>
-					<li><a href="contact.html">CONTATO</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
 	        </ul>
 	    </div>
 	    <!--/.navbar-collapse-->
 	</nav>
 	<!--/.navbar-->
 </div>
-</div>
-	<div class="banner">
-		<div class="container">
-<div class="banner-bottom">
-	<div class="banner-bottom-left">
-		<h2>B<br>U<br>Y</h2>
-	</div>
-	<div class="banner-bottom-right">
-		<div  class="callbacks_container">
-					<ul class="rslides" id="slider4">
-					<li>
-								<div class="banner-info">
-									<h3>Smart But Casual</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								   <h3>Shop Online</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								  <h3>Pack your Bag</h3>
-									<p>Start your shopping here...</p>
-								</div>								
-							</li>
-						</ul>
-					</div>
-					<!--banner-->
-	  			<script src="@routes.Assets.versioned("vendors/appatelier/js/responsiveslides.min.js")"></script>
-			 <script>
-			    // You can also use "$(window).load(function() {"
-			    $(function () {
-			      // Slideshow 4
-			      $("#slider4").responsiveSlides({
-			        auto: true,
-			        pager:true,
-			        nav:false,
-			        speed: 500,
-			        namespace: "callbacks",
-			        before: function () {
-			          $('.events').append("<li>before event fired.</li>");
-			        },
-			        after: function () {
-			          $('.events').append("<li>after event fired.</li>");
-			        }
-			      });
-			
-			    });
-			  </script>
-	</div>
-	<div class="clearfix"> </div>
-</div>
-	<div class="shop">
-		<a href="single.html">SHOP COLLECTION NOW</a>
-	</div>
 	</div>
 		</div>
-		<!-- content-section-starts-here -->
-		<div class="container">
-			<div class="main-content">
-				<div class="online-strip">
-					<div class="col-md-4 follow-us">
-						<h3>follow us : <img src="@routes.Assets.versioned("images/follow.png")" alt="" /></h3>
-					</div>
-					<div class="col-md-4 shipping-grid">
-						<div class="shipping">
-							<img src="@routes.Assets.versioned("images/shipping.png")" alt="" />
-						</div>
-						<div class="shipping-text">
-							<h3>Free Shipping</h3>
-							<p>on orders over $ 199</p>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="col-md-4 online-order">
-						<p>Order online</p>
-						<h3>Tel:999 4567 8902</h3>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="products-grid">
-				<header>
-					<h3 class="head text-center">Latest Products</h3>
-				</header>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p1.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Sed ut perspiciatis</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$329</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p2.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">great explorer</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$599.8</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p3.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">similique sunt</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$359.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p4.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">shrinking </a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$649.99</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p5.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$750</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="@routes.Assets.versioned("images/p6.jpg")" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">equal blame</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$295.59</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p7.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">Neque porro</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$380</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p8.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">perfectly simple</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$540.6</span></a></p>
-					</div>
-					<div class="col-md-4 product simpleCart_shelfItem text-center">
-						<a href="single.html"><img src="images/p9.jpg" alt="" /></a>
-						<div class="mask">
-							<a href="single.html">Quick View</a>
-						</div>
-						<a class="product_name" href="single.html">praising pain</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">$229.5</span></a></p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
+		<!-- registration-form -->
+<div class="registration-form">
+	<div class="container">
+	<div class="dreamcrub">
+			   	 <ul class="breadcrumbs">
+                    <li class="home">
+                       <a href="@routes.Application.index()" title="Go to Home Page">Home</a>&nbsp;
+                       <span>&gt;</span>
+                    </li>
+                    <li class="women">
+                       Meu Cadastro
+                    </li>
+                </ul>
+                <ul class="previous">
+                	<li><a href="index.html">Voltar para a página anterior.</a></li>
+                </ul>
+                <div class="clearfix"></div>
+			   </div>
+		<h2>Meu Cadastro</h2>
+		<div class="registration-grids">
+			<div class="reg-form">
+				<div class="reg">
+					 <p>Bem-vindo, por favor insira os seguintes dados para continuar.</p>
+					 <p>Se você já possui um cadastro. <a href="@routes.Application.account()">click aqui</a></p>
+					 <form>
+					 @meuHelper.meuForm("clientes", routes.Clientes.salvar(id), "post"){
+						@meuHelper.inputTextBootstrap("nome", formCliente("nome").value, "Nome:", "text")
+						@meuHelper.inputTextBootstrap("cpf", formCliente("cpf").value, "CPF:", "text")
+						@meuHelper.inputTextBootstrap("sexo", formCliente("sexo").value, "Sexo:", "text")
+						@meuHelper.inputDateBootstrap("data", "Data de Nascimento")
+						@meuHelper.inputTextBootstrap("telefone", formCliente("telefone").value, "Telefone:", "text")
+						@meuHelper.inputTextBootstrap("endereco", formCliente("endereco").value, "Endereço:", "text")
+						@meuHelper.inputTextBootstrap("numero", formCliente("numero").value, "numero:", "text")
+						@meuHelper.inputTextBootstrap("cep", formCliente("cep").value, "CEP:", "text")
+						@meuHelper.inputTextBootstrap("complemento", formCliente("complemento").value, "Complemento:", "text")
+						@meuHelper.inputTextBootstrap("email", formCliente("email").value, "E-mail:", "text")
+						@meuHelper.inputPasswordBootstrap("password", formCliente("password").value, "Password:", "text")
+						
+						
+					
+						
+						<input type="submit" value="Registrar">
+						
+					}</form>
+				 </div>
 			</div>
-
+			<div class="reg-right">
+				 <h3>REGISTRAR</h3>
+				 <div class="strip"></div>
+				 <p>Para ser cliente, é necessário preencher corretamente o formulário abaixo com os respectivos dados cadastrais. Os campos em NEGRITO são de preenchimento obrigatório e essenciais para processarmos o envio do seu futuro pedido.</p>
+				 <h3 class="lorem">TER UMA CONTA PERMITIRÁ:</h3>
+				 <div class="strip"></div>
+				 	<ol>
+						 <li>Ter acesso a promoções e lançamentos</li>
+						 <li>Visualizar seu histórico de pedidos</li>
+						 <li>Adicionar ou alterar as preferências de e-mail</li>
+					</ol>
+			</div>
+			<div class="clearfix"></div>
 		</div>
-		<div class="other-products">
-		<div class="container">
-			<h3 class="like text-center">Featured Collection</h3>        			
-				     <ul id="flexiselDemo3">
-						<li><a href="single.html"><img src="images/l1.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$759</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l2.jpg" class="img-responsive" alt="" /></a>						
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">praising pain</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$699</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l3.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">Neque porro</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$329</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l4.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">equal blame</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$499</span></a></p>
-							</div>
-						</li>
-						<li><a href="single.html"><img src="images/l5.jpg" class="img-responsive" alt="" /></a>
-							<div class="product liked-product simpleCart_shelfItem">
-							<a class="like_name" href="single.html">perfectly simple</a>
-							<p><a class="item_add" href="#"><i></i> <span class=" item_price">$649</span></a></p>
-							</div>
-						</li>
-				     </ul>
-				    <script type="text/javascript">
-					 $(window).load(function() {
-						$("#flexiselDemo3").flexisel({
-							visibleItems: 4,
-							animationSpeed: 1000,
-							autoPlay: true,
-							autoPlaySpeed: 3000,    		
-							pauseOnHover: true,
-							enableResponsiveBreakpoints: true,
-					    	responsiveBreakpoints: { 
-					    		portrait: { 
-					    			changePoint:480,
-					    			visibleItems: 1
-					    		}, 
-					    		landscape: { 
-					    			changePoint:640,
-					    			visibleItems: 2
-					    		},
-					    		tablet: { 
-					    			changePoint:768,
-					    			visibleItems: 3
-					    		}
-					    	}
-					    });
-					    
-					 }});
-				   </script>
-				   <script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/jquery.flexisel.js")"></script>
-				   </div>
-				   </div>
-		<!-- content-section-ends-here -->
+	</div>
+</div>
+<!-- registration-form -->
+
 		<div class="news-letter">
 			<div class="container">
 				<div class="join">
