--- a/app/views/meuHelper/inputPasswordBootstrap.scala.html
+++ b/app/views/meuHelper/inputPasswordBootstrap.scala.html
@@ -2,6 +2,6 @@
 
 <ul>
 <li class="text-info" for ="@nome">@label</li>
-<li><input type="password"></li>
+<li><input type="@tipo" id="@nome"></li>
 </ul>
 						 
