--- a/app/views/site/register.scala.html
+++ b/app/views/site/register.scala.html
@@ -1,201 +1,7 @@
-@(formCliente: Form[Cliente], id:Long)
+@(formCliente: Form[Cliente], id:Long, categorias: List[Categoria])
 @import meuHelper._
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE html>
-<html>
-<head>
-<title>Atelier Flávia Salles</title>
-<link href="@routes.Assets.versioned("vendors/appatelier/css/bootstrap.css")" rel='stylesheet' type='text/css' />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="@routes.Assets.versioned("vendors/appatelier/js/jquery.min.js")"></script>
-<!-- Custom Theme files -->
-<link href="@routes.Assets.versioned("vendors/appatelier/css/style.css")" rel="stylesheet" type="text/css" media="all" />
-<!-- Custom Theme files -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Eshop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--webfont-->
-<!-- for bootstrap working -->
-	<script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/bootstrap-3.1.1.min.js")"></script>
-<!-- //for bootstrap working -->
-<!-- cart -->
-	<script src="@routes.Assets.versioned("vendors/appatelier/js/simpleCart.min.js")"> </script>
-<!-- cart -->
-<link rel="stylesheet" href="@routes.Assets.versioned("vendors/appatelier/css/flexslider.css") type="text/css" media="screen" />
-</head>
-<body>
-	<!-- header-section-starts -->
-	<div class="header">
-		<div class="header-top-strip">
-			<div class="container">
-				<div class="header-top-left">
-					<ul>
-						<li><a href="@routes.Application.account()"><span class="glyphicon glyphicon-user"> </span>Login</a></li>
-						<li><a href="@routes.Clientes.novoCliente()"><span class="glyphicon glyphicon-lock"> </span>Criar Conta</a></li>			
-					</ul>
-				</div>
-				<div class="header-right">
-						<div class="cart box_1">
-							<a href="checkout.html">
-								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="@routes.Assets.versioned("images/bag.png")" alt=""></h3>
-							</a>	
-							<p><a href="javascript:;" class="simpleCart_empty">Carrinho vazio</a></p>
-							<div class="clearfix"> </div>
-						</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
-	<!-- header-section-ends -->
-	<div class="inner-banner">
-		<div class="container">
-			<div class="banner-top inner-head">
-				<nav class="navbar navbar-default" role="navigation">
-	    <div class="navbar-header">
-	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-	        </button>
-				<div class="logo">
-					<h1><a href="@routes.Application.index()"><span>E</span> -Shop</a></h1>
-				</div>
-	    </div>
-	    <!--/.navbar-header-->
-	
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	        <ul class="nav navbar-nav">
-			<li><a href="index.html">Home</a></li>
-		        <li class="dropdown">
-		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Men <b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-3">
-			            <div class="row">
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>NEW IN</h6>
-						            <li><a href="products.html">New In Clothing</a></li>
-						            <li><a href="products.html">New In Bags</a></li>
-						            <li><a href="products.html">New In Shoes</a></li>
-						            <li><a href="products.html">New In Watches</a></li>
-						            <li><a href="products.html">New In Grooming</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>CLOTHING</h6>
-						            <li><a href="products.html">Polos & Tees</a></li>
-						            <li><a href="products.html">Casual Shirts</a></li>
-						            <li><a href="products.html">Casual Trousers</a></li>
-						            <li><a href="products.html">Jeans</a></li>
-						            <li><a href="products.html">Shorts & 3/4th</a></li>
-						            <li><a href="products.html">Formal Shirts</a></li>
-						            <li><a href="products.html">Formal Trousers</a></li>
-						            <li><a href="products.html">Suits & Blazers</a></li>
-						            <li><a href="products.html">Track Wear</a></li>
-						            <li><a href="products.html">Inner Wear</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>WATCHES</h6>
-						            <li><a href="products.html">Analog</a></li>
-						            <li><a href="products.html">Chronograph</a></li>
-						            <li><a href="products.html">Digital</a></li>
-						            <li><a href="products.html">Watch Cases</a></li>
-					            </ul>
-				            </div>
-							<div class="clearfix"></div>
-			            </div>
-		            </ul>
-		        </li>
-		        <li class="dropdown">
-		            <a href="#" class="dropdown-toggle" data-toggle="dropdown">women <b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-3">
-			            <div class="row">
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>NEW IN</h6>
-						            <li><a href="products.html">New In Clothing</a></li>
-						            <li><a href="products.html">New In Bags</a></li>
-						            <li><a href="products.html">New In Shoes</a></li>
-						            <li><a href="products.html">New In Watches</a></li>
-						            <li><a href="products.html">New In Beauty</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>CLOTHING</h6>
-						            <li><a href="products.html">Polos & Tees</a></li>
-						            <li><a href="products.html">Casual Shirts</a></li>
-						            <li><a href="products.html">Casual Trousers</a></li>
-						            <li><a href="products.html">Jeans</a></li>
-						            <li><a href="products.html">Shorts & 3/4th</a></li>
-						            <li><a href="products.html">Formal Shirts</a></li>
-						            <li><a href="products.html">Formal Trousers</a></li>
-						            <li><a href="products.html">Suits & Blazers</a></li>
-						            <li><a href="products.html">Track Wear</a></li>
-						            <li><a href="products.html">Inner Wear</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-4">
-					            <ul class="multi-column-dropdown">
-									<h6>WATCHES</h6>
-						            <li><a href="products.html">Analog</a></li>
-						            <li><a href="products.html">Chronograph</a></li>
-						            <li><a href="products.html">Digital</a></li>
-						            <li><a href="products.html">Watch Cases</a></li>
-					            </ul>
-				            </div>
-							<div class="clearfix"></div>
-			            </div>
-		            </ul>
-		        </li>
-		        <li class="dropdown">
-		        	<a href="#" class="dropdown-toggle" data-toggle="dropdown">kids <b class="caret"></b></a>
-		            <ul class="dropdown-menu multi-column columns-2">
-			            <div class="row">
-				            <div class="col-sm-6">
-					            <ul class="multi-column-dropdown">
-									<h6>NEW IN</h6>
-						            <li><a href="products.html">New In Boys Clothing</a></li>
-						            <li><a href="products.html">New In Girls Clothing</a></li>
-						            <li><a href="products.html">New In Boys Shoes</a></li>
-						            <li><a href="products.html">New In Girls Shoes</a></li>
-					            </ul>
-				            </div>
-				            <div class="col-sm-6">
-					             <ul class="multi-column-dropdown">
-									<h6>ACCESSORIES</h6>
-						            <li><a href="products.html">Bags</a></li>
-						            <li><a href="products.html">Watches</a></li>
-						            <li><a href="products.html">Sun Glasses</a></li>
-						            <li><a href="products.html">Jewellery</a></li>
-					            </ul>
-				            </div>
-							<div class="clearfix"></div>
-			            </div>
-		            </ul>
-		        </li>
-					<li><a href="typography.html">TYPO</a></li>
-					<li><a href="contact.html">CONTACT</a></li>
-	        </ul>
-	    </div>
-	    <!--/.navbar-collapse-->
-	</nav>
-	<!--/.navbar-->
-</div>
-	</div>
-		</div>
-		<!-- registration-form -->
+@mainSite(categorias){
+<!-- registration-form -->
 <div class="registration-form">
 	<div class="container">
 	<div class="dreamcrub">
@@ -232,6 +38,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						@meuHelper.inputTextBootstrap("complemento", formCliente("complemento").value, "Complemento:", "text")
 						@meuHelper.inputTextBootstrap("email", formCliente("email").value, "E-mail:", "text")
 						@meuHelper.inputPasswordBootstrap("password", formCliente("password").value, "Password:")
+						
+						
 											
 						
 						<input type="submit" value="Registrar">
@@ -257,86 +65,4 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!-- registration-form -->
 
-		<div class="news-letter">
-			<div class="container">
-				<div class="join">
-					<h6>NOSSA NEWSLETTER</h6>
-					<div class="sub-left-right">
-						<form>
-							<input type="text" value="Digite seu e-mail" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Digite seu e-mail';}" />
-							<input type="submit" value="INSCREVA-SE" />
-						</form>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-			</div>
-		</div>
-		<div class="footer">
-		<div class="container">
-		 <div class="footer_top">
-			<div class="span_of_4">
-				<div class="col-md-3 span1_of_4">
-					<h4>Shop</h4>
-					<ul class="f_nav">
-						<li><a href="#">new arrivals</a></li>
-						<li><a href="#">men</a></li>
-						<li><a href="#">women</a></li>
-						<li><a href="#">accessories</a></li>
-						<li><a href="#">kids</a></li>
-						<li><a href="#">brands</a></li>
-						<li><a href="#">trends</a></li>
-						<li><a href="#">sale</a></li>
-						<li><a href="#">style videos</a></li>
-					</ul>	
-				</div>
-				<div class="col-md-3 span1_of_4">
-					<h4>help</h4>
-					<ul class="f_nav">
-						<li><a href="#">frequently asked  questions</a></li>
-						<li><a href="#">men</a></li>
-						<li><a href="#">women</a></li>
-						<li><a href="#">accessories</a></li>
-						<li><a href="#">kids</a></li>
-						<li><a href="#">brands</a></li>
-					</ul>	
-				</div>
-				<div class="col-md-3 span1_of_4">
-					<h4>account</h4>
-					<ul class="f_nav">
-						<li><a href="account.html">login</a></li>
-						<li><a href="register.html">create an account</a></li>
-						<li><a href="#">create wishlist</a></li>
-						<li><a href="checkout.html">my shopping bag</a></li>
-						<li><a href="#">brands</a></li>
-						<li><a href="#">create wishlist</a></li>
-					</ul>				
-				</div>
-				<div class="col-md-3 span1_of_4">
-					<h4>popular</h4>
-					<ul class="f_nav">
-						<li><a href="#">new arrivals</a></li>
-						<li><a href="#">men</a></li>
-						<li><a href="#">women</a></li>
-						<li><a href="#">accessories</a></li>
-						<li><a href="#">kids</a></li>
-						<li><a href="#">brands</a></li>
-						<li><a href="#">trends</a></li>
-						<li><a href="#">sale</a></li>
-						<li><a href="#">style videos</a></li>
-						<li><a href="#">login</a></li>
-						<li><a href="#">brands</a></li>
-					</ul>			
-				</div>
-				<div class="clearfix"></div>
-				</div>
-		  </div>
-		  <div class="cards text-center">
-				<img src="@routes.Assets.versioned("images/cards.jpg")" alt="" />
-		  </div>
-		  <div class="copyright text-center">
-				<p>© 2016 Atelier Flávia Salles. All Rights Reserved | by Kelwy Oliveira, Mayara Ribeiro, Raiane Amaral</p>
-		  </div>
-		</div>
-		</div>
-</body>
-</html>
+}
