--- a/app/views/meuHelper/inputPasswordBootstrap.scala.html
+++ b/app/views/meuHelper/inputPasswordBootstrap.scala.html
@@ -1,7 +1,7 @@
-@(nome:String, value:String, label:String, tipo:String="password")
+@(nome:String, value:String, label:String)
 
 <ul>
 <li class="text-info" for ="@nome">@label</li>
-<li><input type="@tipo" id="@nome"></li>
+<li><input type="password" id="@nome" name="@nome"></li>
 </ul>
 						 
