--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
     </head>
      <body>
-	    @if(flash.containsKey("success")){
+<!-- 	    @if(flash.containsKey("success")){
 		    <div class="alert alert-success">
 		        @flash.get("success")
 		    </div>
@@ -18,7 +18,7 @@
 		   <div class="alert alert-danger">
 		       @flash.get("error")
 		   </div>
-		}
+		} -->
 
 		<nav class="black" role="navigation">
 		    <div class="nav-wrapper">
@@ -33,11 +33,32 @@
 		        <li><a href="/categorias/">Categoria</a></li>
 		      </ul>
 		      <ul class="left hide-on-med-and-down">
-		        <li><a href="/administrador/">Administrador</a></li>
+		        <li><a href="/administradores/">Administrador</a></li>
 		      </ul>
 		</nav>
+		
+		<div class="section">
+		<div style="padding:40px;">
+			<div class="row">
+				<div class="col s12">
+				
+			    @if(flash.containsKey("success")){
+				    <div class="alert alert-success">
+				        @flash.get("success")
+				    </div>
+				}
+				@if(flash.containsKey("error")){
+				   <div class="alert alert-danger">
+				       @flash.get("error")
+				   </div>
+				}				
+				
+				@content</div>
+			</div>
+		</div>
+	</div>
     
-        @content
+        
         <script src="@routes.Assets.versioned("vendors/materialize/js/materialize.min.js")" type="text/javascript"></script>
     </body>
 </html>
