Modificação controle de acesso
Modificação controle de acesso

--- a/app/views/site/account.scala.html
+++ b/app/views/site/account.scala.html
@@ -1,4 +1,4 @@
-@(categorias: List[Categoria])
+@(categorias: List[Categoria], action: String)
 @mainSite(categorias){
 		<!-- content-section-starts -->
 	<div class="content">
@@ -28,14 +28,14 @@
 			   <div class="col-md-6 login-right wow fadeInRight" data-wow-delay="0.4s">
 			  	<h3>REGISTERED CUSTOMERS</h3>
 				<p>If you have an account with us, please log in.</p>
-				<form>
+				<form action="@action" method=post id="formLogin">
 				  <div>
 					<span>Email Address<label>*</label></span>
-					<input type="text"> 
+					<input id="email" name ="email" type="text"> 
 				  </div>
 				  <div>
 					<span>Password<label>*</label></span>
-					<input type="password"> 
+					<input id="senha" name="senha" type="password"> 
 				  </div>
 				  <a class="forgot" href="#">Forgot Your Password?</a>
 				  <input type="submit" value="Login">
