--- a/app/views/mainSite.scala.html
+++ b/app/views/mainSite.scala.html
@@ -29,9 +29,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="header-right">
 						<div class="cart box_1">
 							<a href="@routes.Application.mostraCarrinho()">
-								<h3> <span class="simpleCart_total"> $0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="@routes.Assets.versioned("images/bag.png")" alt=""></h3>
+								<h3> <span class="simpleCart_total"> R$0.00 </span> (<span id="simpleCart_quantity" class="simpleCart_quantity"> 0 </span>)<img src="@routes.Assets.versioned("images/bag.png")" alt=""></h3>
 							</a>	
-							<p><a href="javascript:;" class="simpleCart_empty">Carrinho Vazio</a></p>
+							<p><a href="javascript:;" class="simpleCart_empty">Esvaziar Carrinho</a></p>
 							<div class="clearfix"> </div>
 						</div>
 				</div>
