--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,82 +1,47 @@
 @(categorias: List[Categoria], produtos: List[Produto])
 @mainSite(categorias){
-<div class="banner">
-		<div class="container">
-<div class="banner-bottom">
-	<div class="banner-bottom-left">
-		<h2>B<br>U<br>Y</h2>
-	</div>
-	<div class="banner-bottom-right">
-		<div  class="callbacks_container">
-					<ul class="rslides" id="slider4">
-					<li>
-								<div class="banner-info">
-									<h3>Smart But Casual</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								   <h3>Shop Online</h3>
-									<p>Start your shopping here...</p>
-								</div>
-							</li>
-							<li>
-								<div class="banner-info">
-								  <h3>Pack your Bag</h3>
-									<p>Start your shopping here...</p>
-								</div>								
-							</li>
-						</ul>
-					</div>
-					<!--banner-->
-	  			<script src="@routes.Assets.versioned("vendors/appatelier/js/responsiveslides.min.js")"></script><script>
-			    // You can also use "$(window).load(function() {"
-			    $(function () {
-			      // Slideshow 4
-			      $("#slider4").responsiveSlides({
-			        auto: true,
-			        pager:true,
-			        nav:false,
-			        speed: 500,
-			        namespace: "callbacks",
-			        before: function () {
-			          $('.events').append("<li>before event fired.</li>");
-			        },
-			        after: function () {
-			          $('.events').append("<li>after event fired.</li>");
-			        }
-			      });
-			
-			    });
-			  </script>
-	</div>
-	<div class="clearfix"> </div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="@routes.Assets.versioned("vendors/appatelier/js/responsiveslides.min.js")"></script>
+<script>
+    // You can also use "$(window).load(function() {"
+    $(function () {
+
+      // Slideshow 1
+      $("#slider1").responsiveSlides({
+        maxwidth: 800,
+        speed: 800
+      });
+    });
+  </script>
+
+
+<div id="wrapper"> 
+  <!-- Slideshow 1 -->
+    <ul class="rslides" id="slider1">
+      <li><img src="@routes.Assets.versioned("images/slaide01.jpg")" alt=""></li>
+      <li><img src="@routes.Assets.versioned("images/slaide02.jpg")" alt=""></li>
+    </ul>
 </div>
-	<div class="shop">
-		<a href="single.html">SHOP COLLECTION NOW</a>
-	</div>
-	</div>
-		</div>
+
 		<!-- content-section-starts-here -->
 		<div class="container">
 			<div class="main-content">
 				<div class="online-strip">
 					<div class="col-md-4 follow-us">
-						<h3>follow us : <img src="@routes.Assets.versioned("images/follow.png")" alt="" /></h3>
+						<h3>Siga-nos : <img src="@routes.Assets.versioned("images/follow.png")" alt="" /></h3>
 					</div>
 					<div class="col-md-4 shipping-grid">
 						<div class="shipping">
 							<img src="@routes.Assets.versioned("images/shipping.png")" alt="" />
 						</div>
 						<div class="shipping-text">
-							<h3>Free Shipping</h3>
-							<p>on orders over $ 199</p>
+							<h3>Frete Gratis</h3>
+							<p>para compras acima de R$ 150,00</p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
 					<div class="col-md-4 online-order">
-						<p>Order online</p>
+						<p>Compra por telefone</p>
 						<h3>Tel:999 4567 8902</h3>
 					</div>
 					<div class="clearfix"></div>
@@ -92,7 +57,7 @@
 							<a href="@routes.Produtos.detalhesProdutoSite(produto.id)">Quick View</a>
 						</div>
 						<a class="product_name" href="single.html">@produto.nome</a>
-						<p><a class="item_add" href="#"><i></i> <span class="item_price">R$ @produto.preco</span></a></p>
+						<p><a class="item_add" href="#"><i></i> <span class="item_price">R$ @{"%.2f".format(produto.preco.toFloat)}</span></a></p>
 					</div>
 				}	
 					<div class="clearfix"></div>
@@ -135,7 +100,7 @@
 							</div>
 						</li>
 				     </ul>
-				    <script type="text/javascript">
+				 <!-- <script type="text/javascript">
 					 $(window).load(function() {
 						$("#flexiselDemo3").flexisel({
 							visibleItems: 4,
@@ -160,10 +125,9 @@
 					    	}
 					    });
 					    
-					 }});
-				   </script>
-				   <script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/jquery.flexisel.js")"></script>
+					 });
+				   </script> -->
+				   <!-- <script type="text/javascript" src="@routes.Assets.versioned("vendors/appatelier/js/jquery.flexisel.js")"></script> -->
 				   </div>
 				   </div>
-
-}
+}}
