--- a/app/views/site/account.scala.html
+++ b/app/views/site/account.scala.html
@@ -4,40 +4,25 @@
 	<div class="content">
 	<div class="container">
 		<div class="login-page">
-			    <div class="dreamcrub">
-			   	 <ul class="breadcrumbs">
-                    <li class="home">
-                       <a href="index.html" title="Go to Home Page">Home</a>&nbsp;
-                       <span>&gt;</span>
-                    </li>
-                    <li class="women">
-                       Login
-                    </li>
-                </ul>
-                <ul class="previous">
-                	<li><a href="index.html">Back to Previous Page</a></li>
-                </ul>
-                <div class="clearfix"></div>
-			   </div>
 			   <div class="account_grid">
 			   <div class="col-md-6 login-left wow fadeInLeft" data-wow-delay="0.4s">
-			  	 <h2>NEW CUSTOMERS</h2>
-				 <p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
-				 <a class="acount-btn" href="register.html">Create an Account</a>
+			  	 <h2>Novo Cliente?</h2>
+				 <p>Ao criar uma conta na nossa loja, você será capaz de utilizar formas de pagamento mais rápido, armazenar endereço de envio, ver e rastrear suas encomendas em sua conta e muito mais.</p>
+				 <a class="acount-btn" href="@routes.Clientes.novoCliente()">Criar Conta</a>
 			   </div>
 			   <div class="col-md-6 login-right wow fadeInRight" data-wow-delay="0.4s">
-			  	<h3>REGISTERED CUSTOMERS</h3>
-				<p>If you have an account with us, please log in.</p>
+			  	<h3>JÁ POSSUI CADASTRO?</h3>
+				<p>Se você tem uma conta conosco, por favor faça o login.</p>
 				<form action="@action" method=post id="formLogin">
 				  <div>
-					<span>Email Address<label>*</label></span>
+					<span>Endereço de Email<label>*</label></span>
 					<input id="email" name ="email" type="text"> 
 				  </div>
 				  <div>
-					<span>Password<label>*</label></span>
+					<span>Senha<label>*</label></span>
 					<input id="senha" name="senha" type="password"> 
 				  </div>
-				  <a class="forgot" href="#">Forgot Your Password?</a>
+				  <!-- <a class="forgot" href="#">Forgot Your Password?</a> -->
 				  <input type="submit" value="Login">
 			    </form>
 			   </div>	
