Add banner e slide

--- a/app/views/mainSite.scala.html
+++ b/app/views/mainSite.scala.html
@@ -13,7 +13,9 @@
 <meta name="keywords" content="Eshop Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 <!-- cart -->
-<link rel="stylesheet" href="@routes.Assets.versioned("vendors/appatelier/css/flexslider.css") type="text/css" media="screen" />
+<!-- <link rel="stylesheet" href="@routes.Assets.versioned("vendors/appatelier/css/flexslider.css")" type="text/css" media="screen" /> -->
+
+			<link rel="stylesheet" href="@routes.Assets.versioned("vendors/appatelier/css/responsiveslides.css")">
 </head>
      <body>
 <!-- header-section-starts -->
@@ -118,5 +120,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- //for bootstrap working -->
 		<!-- cart -->
 			<script src="@routes.Assets.versioned("vendors/appatelier/js/simpleCart.min.js")"> </script>
+		
 		</body>
 </html>
