update cliente ws

--- a/app/views/clientes/lista.scala.html
+++ b/app/views/clientes/lista.scala.html
@@ -35,7 +35,7 @@
 				<td>@cliente.complemento</td>
 				<td>@cliente.email</td>
 				<td>@cliente.password</td>
-				<td>@cliente.dataNascimento</td>
+				<td>@cliente.datanascimento</td>
 				<td>@cliente.sexo</td>
 				<td><a href="@routes.Clientes.remover(cliente.id)" ><input type="submit" class="btn btn-primary" value="Remover"></a></td>
 				<td><a href="@routes.Clientes.detalhes(cliente.id)"><input type="submit" class="btn btn-primary" value="Editar"></a></td>
