--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="products-grid">
 				<header>
-					<h3 class="head text-center">Latest Products</h3>
+					<h3 class="head text-center">Ultimos produtos</h3>
 				</header>
 				@for(produto <- produtos) {
 					<div class="col-md-4 product simpleCart_shelfItem text-center">
@@ -69,7 +69,7 @@
 		</div>
 		<div class="other-products">
 		<div class="container">
-			<h3 class="like text-center">Featured Collection</h3>        			
+			<h3 class="like text-center"></h3>        			
 				     <ul id="flexiselDemo3">
 						<li><a href="single.html"><img src="images/l1.jpg" class="img-responsive" alt="" /></a>
 							<div class="product liked-product simpleCart_shelfItem">
