--- a/app/views/site/checkout.scala.html
+++ b/app/views/site/checkout.scala.html
@@ -35,6 +35,10 @@
 				  }
 				  </tbody>
 				</table>
+				
+				<div>
+				<input type="submit" value="GRAVAR PEDIDO" />
+				</div>
 		
 	</div>
 </div>
