--- a/app/views/clientes/detalhes.scala.html
+++ b/app/views/clientes/detalhes.scala.html
@@ -15,6 +15,7 @@
 		@meuHelper.inputText("complemento", formCliente("complemento").value, "Complemento:", "text")
 		@meuHelper.inputText("email", formCliente("email").value, "E-mail:", "text")
 		@meuHelper.inputText("password", formCliente("password").value, "Password:", "text")
+		@meuHelper.inputText("datanascimento", formCliente("datanascimento").value, "Data:", "text")
 		
 		
 	
