Update login e valida sessao
Update login e valida sessao

--- a/app/views/categorias/lista.scala.html
+++ b/app/views/categorias/lista.scala.html
@@ -1,7 +1,7 @@
 @(categorias: List[Categoria])
 @main("Catalogo de Categorias") {
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<h4>Todos os categorias</h4>
+<h4>Todos as categorias</h4>
 <a href="/categorias/novo"><button type="button" class="btn btn-primary-outline">Novo</button></a>
 <div class="table table-responsive col-md-12">
 	<table class="highlight">
