--- a/app/views/site/account.scala.html
+++ b/app/views/site/account.scala.html
@@ -1,5 +1,5 @@
-@(categorias: List[Categoria], action: String)
-@mainSite(categorias){
+@(categorias: List[Categoria], nomeSessao: String, action: String)
+@mainSite(categorias, nomeSessao){
 		<!-- content-section-starts -->
 	<div class="content">
 	<div class="container">
