--- a/app/views/site/checkout.scala.html
+++ b/app/views/site/checkout.scala.html
@@ -1,5 +1,5 @@
-@(categorias: List[Categoria], itemPedidos: List[ItemPedido])
-@mainSite(categorias){
+@(categorias: List[Categoria], nomeSessao: String, itemPedidos: List[ItemPedido])
+@mainSite(categorias, nomeSessao){
 		<!-- checkout -->
 <div class="cart-items">
 	<div class="container">
