--- a/app/views/site/products.scala.html
+++ b/app/views/site/products.scala.html
@@ -1,5 +1,5 @@
-@(categorias: List[Categoria], produtos: List[Produto])
-@mainSite(categorias){
+@(categorias: List[Categoria], nomeSessao: String, produtos: List[Produto])
+@mainSite(categorias, nomeSessao){
 <!-- content-section-starts -->
 	<div class="container">
 	   <div class="products-page">
