--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
-@(categorias: List[Categoria], produtos: List[Produto])
-@mainSite(categorias){
+@(categorias: List[Categoria], nomeSessao: String, produtos: List[Produto])
+@mainSite(categorias, nomeSessao){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="@routes.Assets.versioned("vendors/appatelier/js/responsiveslides.min.js")"></script>
 <script>
